# pipeshift

./: .dockerignore  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.agent  LICENSE  README.md  TASKS.md  pyproject.toml
docs/: technical-architecture.md
infra/: cloudformation.yml
src/pipeshift/: __init__.py  analyzer.py  cli.py  scorer.py
src/pipeshift/agent/: __init__.py  openapi_schema.json
src/pipeshift/generator/: __init__.py
src/pipeshift/ir/: __init__.py  schema.py
src/pipeshift/orchestration/: __init__.py
src/pipeshift/parser/: __init__.py  informatica_xml.py
src/pipeshift/translator/: __init__.py
tests/: test_aggregator_joiner.py  test_analyzer.py  test_end_to_end.py  test_enterprise_fixtures.py  test_format_and_vars.py  test_parser.py  test_phase2_functions.py  test_rank_seq_update.py  test_ref_and_recon.py  test_router_scoring.py  test_scd_snapshot.py  test_step_functions.py  test_translator.py
tests/sample_exports/: agg_orders.xml  comprehensive_gl.xml  customer_dim.xml  powercenter_enterprise_edge_cases.xml  powercenter_multi_mapping_export.xml  router_transactions.xml  scd2_product.xml
