[project]
name = "pipeshift"
version = "0.1.0"
description = "AI-powered migration agent: Informatica PowerCenter → dbt / AWS Glue"
requires-python = ">=3.11"
dependencies = [
    "pydantic==2.11.1",
    "lxml==5.3.1",
]

[project.scripts]
pipeshift = "pipeshift.cli:main"

[project.optional-dependencies]
dev = [
    "pytest==8.3.5",
    "pytest-cov==6.1.1",
    "ruff==0.11.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pipeshift"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
